--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,16 +19,19 @@ services:
             - "8080"
             - "56745:56745"
     db:
-        image: mysql:5.7
-        volumes:
-            - dbdata:/var/lib/mysql
-        ports:
-            - "4306:3306"
+        image: mongo
+        restart: always
         environment:
-            MYSQL_ROOT_PASSWORD: express
-            MYSQL_DATABASE: express
-            MYSQL_USER: express
-            MYSQL_PASSWORD: express
-
-volumes:
-    dbdata:
+            MONGO_INITDB_ROOT_USERNAME: root
+            MONGO_INITDB_ROOT_PASSWORD: example
+    mongo-express:
+        image: mongo-express
+        restart: always
+        links:
+            - db
+        ports:
+            - 8081:8081
+        environment:
+            ME_CONFIG_MONGODB_SERVER: db
+            ME_CONFIG_MONGODB_ADMINUSERNAME: root
+            ME_CONFIG_MONGODB_ADMINPASSWORD: example
